appId: chat.rocket.reactnative
jsEngine: graaljs
env:
  URL: open.rocket.chat
  

---
- runFlow: relaunch-app.yaml

- extendedWaitUntil:
    visible: "Add Workspace"
    timeout: 100000

- tapOn:
    text: "Workspace URL, Required"

- inputText: ${URL}

- tapOn: "Connect"
  
- assertVisible: 
   id: "workspace-view"

- tapOn: "Login"
