appId: ${APP_ID}
name: Erase Text
tags:
  - 'util'

---
- runFlow:
    when:
      true: ${id != null}
    commands:
      - longPressOn:
          id: ${id}
- runFlow:
    when:
      true: ${text != null}
    commands:
      - doubleTapOn:
          text: .*${text}.*
- runFlow:
    when:
      visible:
        text: 'Select All'
    commands:
      - tapOn: Select All
      - eraseText: 1
- runFlow:
    when:
      notVisible:
        text: 'Select All'
    commands:
      - eraseText: 100
