appId: ${APP_ID}
name: Go back
tags:
  - 'util'

---
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          id: '(custom-)?header-back'

- evalScript: ${output.iosBackButtonHasId = false}
- runFlow:
    when:
      platform: iOS
      visible:
        id: 'BackButton'
    commands:
      - evalScript: ${output.iosBackButtonHasId = true}

- runFlow:
    when:
      platform: iOS
      true: ${output.iosBackButtonHasId}
    commands:
      - tapOn:
          id: 'BackButton'
          retryTapIfNoChange: true

- runFlow:
    when:
      platform: iOS
      true: ${!output.iosBackButtonHasId}
    commands:
      - tapOn:
          text: 'Back(, .*)?'
          retryTapIfNoChange: true
