appId: ${APP_ID}
name: Launch app
tags:
  - 'util'

---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          permissions:
            all: allow
      - waitForAnimationToEnd:
          timeout: 60000
      - runFlow:
          when:
            visible: '.*Pixel Launcher.*'
            platform: Android
          commands:
            - tapOn: 'Close App'
      - runFlow:
          when:
            visible: ".*isn't responding.*"
            platform: Android
          commands:
            - tapOn: 'Wait'
      - assertVisible: 'Add workspace'
##testing
