appId: ${APP_ID}
name: Logout
tags:
  - 'util'

---
- runFlow:
    when:
      visible:
        id: 'profile-view-open-sidebar'
    commands:
      - tapOn:
          id: 'profile-view-open-sidebar'

- runFlow:
    when:
      platform: Android
      visible:
        id: 'rooms-list-view-sidebar'
    commands:
      - tapOn:
          id: 'rooms-list-view-sidebar'

- runFlow:
    when:
      platform: iOS
      visible:
        text: 'Menu'
    commands:
      - tapOn:
          text: 'Menu'

- runFlow:
    when:
      platform: Android
      visible:
        id: 'android:id/autofill_save_no'
    commands:
      - tapOn:
          id: 'android:id/autofill_save_no'

- extendedWaitUntil:
    visible:
      id: 'sidebar-settings'
    timeout: 60000

- tapOn:
    id: 'sidebar-settings'

- scrollUntilVisible:
    element:
      id: 'settings-logout'
    direction: DOWN

- assertVisible:
    id: 'settings-logout'

- tapOn:
    id: 'settings-logout'

- extendedWaitUntil:
    visible:
      text: '.*You will be logged out of this application.*'
    timeout: 60000

- assertVisible:
    text: Logout
    index: 0

- runFlow:
    when:
      platform: Android
    commands:
      - extendedWaitUntil:
          visible:
            id: 'android:id/button1'
          timeout: 60000
      - tapOn:
          text: Logout
          index: 0

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          point: '65%,56%'

- extendedWaitUntil:
    visible:
      id: 'new-server-view'
    timeout: 5000
