appId: ${APP_ID}
name: Navigate to login
tags:
  - 'util'

---
- tapOn: Workspace URL. Required.
- inputText: ${output.data.candidateServer}
- tapOn:
    text: Connect
    waitToSettleTimeoutMs: 1000
- extendedWaitUntil:
    timeout: 60000
    visible: Login
- tapOn: Login
- extendedWaitUntil:
    visible:
      id: 'login-view'
    timeout: 60000
