appId: ${APP_ID}
name: Navigate to room action
tags:
  - 'util'

---
- runFlow:
    when:
      notVisible:
        id: 'room-view'
    commands:
      - runFlow:
          file: './search-and-navigate-room.yaml'
          env:
            ROOM: ${ROOM}

- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: 'room-view-header-more'
      - tapOn:
          id: 'room-view-header-room-actions'

- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible:
          id: 'room-header'
          index: 0
      - tapOn:
          id: 'room-header'
          index: 0

- extendedWaitUntil:
    visible:
      id: 'room-actions-view'
    timeout: 60000
