appId: chat.rocket.reactnative
tags:
  - 'utill'

---
- runFlow: navigate-to-register.yaml
- tapOn:
    text: 'Full name. Required.'
- inputText:
    text: ${output.user.username}
- pressKey: 'enter'
- tapOn:
    text: 'Username. Required.'
- inputText:
    text: ${output.user.username}
- pressKey: 'enter'
- tapOn:
    text: 'Email. Required.'
- inputText:
    text: ${output.user.email}
- pressKey: 'enter'
- tapOn:
    text: 'Password. Required.'
- inputText:
    text: ${output.user.password}
- pressKey: 'enter'

# For Android
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          id: 'register-view-confirm-password'

# For IOS
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Confirm Password. Required.'
      - inputText:
          text: ${output.user.password}

- scrollUntilVisible:
    element:
      text: 'Register'
- tapOn: 'Register'

- runFlow:
    when:
      visible:
        id: 'register-view-submit'
    commands:
      - tapOn:
          id: 'register-view-submit'
- runFlow:
    when:
      visible: 'Username is already in use'
    commands:
      - tapOn: 'OK'
- runFlow:
    when:
      visible: 'OK'
    commands:
      - tapOn: 'OK'
