appId: chat.rocket.reactnative
name: "Navigate to Login"
jsEngine: graaljs
onFlowStart:
  - runScript: "../setup.js"
tags:
  - util
---
- tapOn:
    id: "new-server-view-input"
- inputText: ${output?.config?.workspaceUrl}
- pressKey: Enter
- assertVisible: ${output.config.workspaceName}
- tapOn: "Login"
- tapOn:
    id: "login-view-email"
- inputText: ${output.defaultUser.username}
- tapOn:
    id: "login-view-password"
- inputText: ${output.defaultUser.password}
- hideKeyboard
- tapOn:
    id: "login-view-submit"