appId: chat.rocket.reactnative
name: 'Login Test'
---
- startRecording:
    path: './recording/login_test'
    label: 'Begin collecting test evidence'
- launchApp:
    label: 'Launch app'
    clearState: true
    permissions:
      all: allow
- extendedWaitUntil:
    visible: 'Add Workspace'
    timeout: 20000
- tapOn:
    id: new-server-view-input
    timeout: 20000
- inputText:
    text: https://mobile.rocket.chat
    timeout: 20000
- tapOn: Connect
- tapOn: Login
- tapOn:
    id: login-view-email
    timeout: 20000
- inputText:
    text: rohit.bansal@gmail.com
    timeout: 20000
- pressKey: Enter
- inputText:
    text: rohit.bansal@gmail.com
    timeout: 20000
- tapOn:
    id: login-view
    timeout: 20000
- tapOn:
    id: login-view-submit
    timeout: 20000
- assertVisible:
    id: 'rooms-list-view-item-general'
    timeout: 20000
- stopRecording
