appId: chat.rocket.reactnative
---
- runFlow: ../helpers/relaunch-app.yaml
- extendedWaitUntil:
    visible: 'Add Workspace'
    timeout: 60000
- tapOn:
    text: 'Workspace URL , Required . Error: '
- inputText:
    id: 'new-server-view-input'
    text: 'invalidtest'
- tapOn: 'Connect'
- assertVisible: 'Invalid workspace URL'
- tapOn:
    text: 'OK'
- runFlow:
    file: ../helpers/navigate-to-workspace.yaml
    env:
      URL: open.rocket.chat
