appId: chat.rocket.reactnative
jsEngine: graaljs
onFlowStart:
  - runScript: '../scripts/setup.js'

---
- startRecording: recording
- runFlow: ../helpers/relaunch-app.yaml
- extendedWaitUntil:
    visible: 'Add Workspace'
    timeout: 60000
- tapOn:
    text: 'Workspace URL. Required.'
- inputText:
    id: 'new-server-view-input'
    text: 'https://invalid.workspace.url'
- tapOn: 'Connect'
- assertVisible: 'Invalid URL'

- runFlow: ../helpers/relaunch-app.yaml
- extendedWaitUntil:
    visible: 'Add Workspace'
    timeout: 60000
- tapOn:
    text: 'Workspace URL. Required.'
- inputText:
    text: ${output.data.server}
- tapOn: 'Connect'
- extendedWaitUntil:
    visible: 'Login'
    timeout: 60000
- extendedWaitUntil:
    visible: 'Create an account'
    timeout: 60000
- stopRecording
