appId: chat.rocket.reactnative
name: "Legal"
jsEngine: graaljs
onFlowStart:
    - runScript: "../setup.js"
---

- clearState
- launchApp

- runFlow: "../helpers/navigateToLogin.yaml"
- assertVisible:
    id: "login-view-more"
- tapOn:
    id: "login-view-more"
- assertVisible:
    id: "legal-view"
- assertVisible:
    id: "legal-terms-button"
- assertVisible:
    id: "legal-privacy-button"

- launchApp
- runFlow: "../helpers/navigateToRegister.yaml"
- assertVisible:
    id: "register-view-more"
- tapOn:
    id: "register-view-more"
- assertVisible:
    id: "legal-view"
- assertVisible:
    id: "legal-terms-button"
- assertVisible:
    id: "legal-privacy-button"