appId: chat.rocket.reactnative
name: "Forgot Password Flow"
jsEngine: graaljs
onFlowStart:
    - runScript: "../setup.js"
---

- clearState
- launchApp

- runFlow: "../helpers/navigateToLogin.yaml"
- tapOn:
    id: "login-view-forgot-password"
- assertVisible:
    id: "forgot-password-view"
- assertVisible:
    id: "forgot-password-view-email"
- assertVisible:
    id: "forgot-password-view-submit"
- tapOn:
    id: "forgot-password-view-email"
- inputText: "test_user@rocket.chat"
- tapOn:
    id: "forgot-password-view-submit"
- assertVisible: "Ok"
- tapOn: "Ok"
- assertVisible:
    id: "login-view"