appId: chat.rocket.reactnative
env:
  RESET_EMAIL: test@gmail.com
---
- runFlow:
    file: ../helpers/navigate-to-workspace.yaml
    env:
      URL: open.rocket.chat
# Tap on the Forgot Password button
- tapOn:
    id: 'login-view-forgot-password'
# Wait for the forgot password screen to appear
- extendedWaitUntil:
    visible:
      id: 'forgot-password-view'
    timeout: 20000
# Assert all necessary elements exist
- assertVisible:
    id: 'forgot-password-view'
# There is only one text input fids which is in focus thats why directly inserting text into there
- inputText:
    text: ${RESET_EMAIL} # Replace with dynamically created user email if needed
# Tap the submit button
- tapOn:
    id: 'forgot-password-view-submit'
# Handle alert and confirm reset
- extendedWaitUntil:
    visible:
      text: 'OK'
    timeout: 10000
- tapOn:
    text: 'OK'
# Wait for redirection to login view
- extendedWaitUntil:
    visible:
      id: 'login-view'
    timeout: 60000
- assertVisible:
    id: 'login-view'
