appId: chat.rocket.reactnative
---
- runFlow:
    file: ../helpers/navigate-to-workspace.yaml
    env:
      URL: open.rocket.chat
- tapOn:
    id: 'login-view-forgot-password'
- extendedWaitUntil:
    visible:
      id: 'forgot-password-view'
    timeout: 20000
- assertVisible:
    id: 'forgot-password-view'
- inputText:
    text: test@gmail.com
- tapOn:
    id: 'forgot-password-view-submit'
- extendedWaitUntil:
    visible:
      text: "If this email is registered, we'll send instructions on how to reset your password. If you do not receive an email shortly, please come back and try again."
    timeout: 10000
- tapOn:
    text: 'OK'
