appId: chat.rocket.reactnative
jsEngine: graaljs
onFlowStart:
  - runScript: '../scripts/setup.js'

---
- runFlow: ../helpers/relaunch-app.yaml
- runFlow:
    file: ../helpers/navigate-to-register.yaml
- tapOn: Full name. Required.
- inputText: alreadyused@gmail.com
- pressKey: enter
- tapOn: Username. Required.
- inputText: already.used
- pressKey: enter
- tapOn: Email. Required.
- inputText: alreadyused@gmail.com
- pressKey: enter
- tapOn: Password. Required.
- inputText: password
- pressKey: enter
- scrollUntilVisible:
    element:
      id: register-view-submit
- tapOn:
    id: register-view-submit
- assertVisible:
    id: rooms-list-view
- assertVisible: Username is already in use
