appId: chat.rocket.reactnative
name: "Login Flow"
jsEngine: graaljs
onFlowStart:
    - runScript: "../setup.js"
---

- clearState
- launchApp

- runFlow: "../helpers/navigateToLogin.yaml"
- runScript: "../utils/randomUser.js"
- runScript: "../utils/createUser.js"

- tapOn:
    id: "login-view-email"
- inputText: ${output.randomUser.email}
- pressKey: Enter

#test invalid password 
- tapOn:
    id: "login-view-password"
- inputText: NotMyActualPassword
- pressKey: Enter
- tapOn:
    id: "login-view-submit"
- assertVisible: "Your credentials were rejected! Please try again."
- tapOn: "OK"

#valid login
- tapOn:
    id: "login-view-password"
- eraseText
- inputText: ${output.randomUser.password}
- pressKey: Enter
- tapOn:
    id: "login-view-submit"
- assertVisible: "general"
- tapOn:
    id: "rooms-list-view-sidebar"
- assertVisible: ${output.randomUser.username}